resolvendo desafio filtro de produtos por preco